--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.20.1",
     "axios": "^0.27.2",
     "http-proxy-middleware": "^2.0.6",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
